# ckb_sudt_script

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
contracts/ckb_sudt_script/: Cargo.toml  README.md
contracts/ckb_sudt_script/src/: error.rs  main.rs
contracts/simple-lock/: Cargo.toml  build.rs  idl.json
contracts/simple-lock/src/: error.rs  lib.rs  main.rs  witness.rs
contracts/timelock-lock/: Cargo.toml  Makefile  idl.json
contracts/timelock-lock/src/: error.rs  main.rs
deployer/: Cargo.toml
deployer/src/: config.rs  deploy_script.rs  main.rs
tests/src/: tests.rs
