[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/simple-lock",
  "contracts/timelock-lock",
  "contracts/ckb_sudt_script", "deployer",
  "tests",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true
opt-level = "z"
