[package]
name = "deployer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "deployer"
path = "src/main.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[dependencies]
ckb-sdk = "4.4"
ckb-types = "0.202"
ckb-hash = "0.202"
ckb-jsonrpc-types = "0.202"
serde_json = "1"
hex = "0.4"
anyhow = "1"
secp256k1 = { version = "0.30.0", features = ["rand"] }
rand = "0.8"
dotenvy = "0.15"
