[package]
name = "timelock-lock"
version = "0.1.0"
edition = "2024"

[dependencies]
ckb-std = "1.1"
ckb-hash = { version = "1.1.0", default-features = false, features = ["ckb-contract"] }
ckb-idl-derive = { git = "https://github.com/OWK50GA/ckb-idl-derive", branch = "refactor/out-dir" }
ckb-idl-types = { git = "https://github.com/OWK50GA/ckb-idl-derive", branch = "refactor/out-dir", features = ["ckb-contract"] }

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
